[gd_scene load_steps=36 format=2]

[ext_resource path="res://Stage2.gd" type="Script" id=1]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/updated.png" type="Texture" id=3]
[ext_resource path="res://assets/SPRITES/Hero/idle-1.png" type="Texture" id=4]
[ext_resource path="res://assets/skills/doom.png" type="Texture" id=5]
[ext_resource path="res://assets/skills-update/freeze.png" type="Texture" id=6]
[ext_resource path="res://assets/skills-update/freeze-dim.png" type="Texture" id=7]
[ext_resource path="res://assets/skills-gamedev/frozen_screen(opacity50).png" type="Texture" id=8]
[ext_resource path="res://assets/skills-update/doom-dim.png" type="Texture" id=9]
[ext_resource path="res://assets/skills-gamedev/trees-bg.png" type="Texture" id=10]
[ext_resource path="res://assets/Portal/Portal-1.png" type="Texture" id=11]
[ext_resource path="res://assets/Portal/Portal-2.png" type="Texture" id=12]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/7.png" type="Texture" id=13]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/3.png" type="Texture" id=14]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/4.png" type="Texture" id=15]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/5.png" type="Texture" id=16]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/6.png" type="Texture" id=17]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/8.png" type="Texture" id=18]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/1.png" type="Texture" id=19]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/2.png" type="Texture" id=20]
[ext_resource path="res://assets/skills-gamedev/doom skill effect/9.png" type="Texture" id=21]
[ext_resource path="res://assets/SPRITES/Hero/idle-2.png" type="Texture" id=22]
[ext_resource path="res://assets/SPRITES/Hero/attack.png" type="Texture" id=23]
[ext_resource path="res://assets/skills/black.png" type="Texture" id=24]
[ext_resource path="res://doom_sfx.tscn" type="PackedScene" id=25]
[ext_resource path="res://freeze_sfx.tscn" type="PackedScene" id=26]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.9993, 310.25 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 21 ) ],
"loop": false,
"name": "cast",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="freeze_sfx" parent="." instance=ExtResource( 26 )]

[node name="doom_sfx" parent="." instance=ExtResource( 25 )]

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 1.0
margin_right = 620.0
margin_bottom = 785.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="Hero" type="AnimatedSprite" parent="."]
position = Vector2( 309, 752 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 12 )
animation = "attack"

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2( -1, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2( 309.75, 440 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnContainer"]
position = Vector2( 100, -34 )

[node name="Position2D5" type="Position2D" parent="SpawnContainer"]
position = Vector2( 200, -34 )

[node name="Position2D2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 300, -34 )

[node name="Position2D3" type="Position2D" parent="SpawnContainer"]
position = Vector2( 400, -34 )

[node name="Position2D4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 500, -34 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="BossSpawnContainer" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="BossSpawnContainer"]
position = Vector2( 315, -88 )

[node name="BossEnemyContainer" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="BossEnemyContainer"]
position = Vector2( 80, 160 )

[node name="Position2D2" type="Position2D" parent="BossEnemyContainer"]
position = Vector2( 180, 160 )

[node name="Position2D3" type="Position2D" parent="BossEnemyContainer"]
position = Vector2( 440, 160 )

[node name="Position2D4" type="Position2D" parent="BossEnemyContainer"]
position = Vector2( 540, 160 )

[node name="BossContainer" type="Node2D" parent="."]

[node name="BossTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="AfterBoss" type="Timer" parent="."]
wait_time = 5.0

[node name="Label2" type="Label" parent="."]
margin_left = 470.0
margin_top = 755.0
margin_right = 510.0
margin_bottom = 786.0
custom_fonts/font = SubResource( 9 )
text = "1"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 550.0
margin_top = 755.0
margin_right = 590.0
margin_bottom = 786.0
custom_fonts/font = SubResource( 9 )
text = "2"
align = 1

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 450.0
margin_top = 685.0
margin_right = 850.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="TextureRect5" type="TextureRect" parent="."]
margin_left = 450.0
margin_top = 685.0
margin_right = 850.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 530.0
margin_top = 685.0
margin_right = 930.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="TextureRect6" type="TextureRect" parent="."]
margin_left = 530.0
margin_top = 685.0
margin_right = 930.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_top = -41.0
margin_right = 1033.0
margin_bottom = 739.0
rect_scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="Portal" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 80, 147 )
scale = Vector2( 2.97143, 2.52 )
frames = SubResource( 10 )
animation = "idle"

[node name="Portal2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 180, 147 )
scale = Vector2( 2.97143, 2.52 )
frames = SubResource( 10 )
animation = "idle"

[node name="Portal3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 440, 147 )
scale = Vector2( 2.97143, 2.52 )
frames = SubResource( 10 )
animation = "idle"

[node name="Portal4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 540, 147 )
scale = Vector2( 2.97143, 2.52 )
frames = SubResource( 10 )
animation = "idle"

[node name="Doom" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 311, 399 )
frames = SubResource( 11 )
animation = "cast"

[node name="BossSkill" type="TextureRect" parent="."]
visible = false
margin_left = -15.0
margin_top = -10.0
margin_right = 632.0
margin_bottom = 802.0
texture = ExtResource( 24 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_right = 6.0
margin_bottom = 6.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 630.0
margin_bottom = 784.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
margin_left = 195.0
margin_top = 242.0
margin_right = 427.0
margin_bottom = 534.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "YOU LOST"

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 232.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 4 )
text = "RESTART"

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 232.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 4 )
text = "STAGE MENU"

[node name="CompleteScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_right = 6.0
margin_bottom = 7.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CompleteScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 630.0
margin_bottom = 785.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CompleteScreen/CenterContainer"]
margin_left = 195.0
margin_top = 205.0
margin_right = 427.0
margin_bottom = 572.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="CanvasLayer/CompleteScreen/CenterContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 3 )
text = "STAGE
COMPLETE"
align = 1

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/CompleteScreen/CenterContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 232.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 4 )
text = "PLAY AGAIN"

[node name="MenuButton" type="Button" parent="CanvasLayer/CompleteScreen/CenterContainer/VBoxContainer"]
margin_top = 307.0
margin_right = 232.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 4 )
text = "STAGE MENU"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Frozen_Effect" type="TextureRect" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_right = 620.0
margin_bottom = 785.0
texture = ExtResource( 8 )

[node name="TopRowLeft" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 38.0

[node name="EnemiesKilledLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_right = 90.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="EnemiesKilledValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_left = 94.0
margin_right = 109.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TopRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_left = 113.0
margin_right = 598.0
margin_bottom = 38.0
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_right = 210.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "        Timer:"

[node name="TimerValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 214.0
margin_right = 289.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "00:00"

[node name="TimerValue2" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 293.0
margin_right = 428.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "         "

[node name="PauseButton" type="Button" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 432.0
margin_right = 485.0
margin_bottom = 38.0
text = "PAUSE"

[node name="TopRowLeft2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 42.0
margin_right = 620.0
margin_bottom = 80.0

[node name="TopRow2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TopRowLeft2"]
margin_right = 169.0
margin_bottom = 38.0
mouse_filter = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft2/TopRow2"]
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty:"

[node name="DifficultyValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft2/TopRow2"]
margin_left = 169.0
margin_right = 169.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )

[node name="MiddleRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 620.0
margin_bottom = 746.0
mouse_filter = 2
size_flags_vertical = 3

[node name="TopRow3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 750.0
margin_right = 620.0
margin_bottom = 781.0
mouse_filter = 2

[node name="SP" type="Label" parent="CanvasLayer/VBoxContainer/TopRow3"]
margin_right = 36.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 8 )
text = "SP:"

[node name="SPValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRow3"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 8 )

[node name="BottomRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 785.0
margin_right = 620.0
margin_bottom = 785.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/BottomRow"]
mouse_filter = 2

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="LoseArea" to="." method="_on_LoseArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]
[connection signal="timeout" from="AfterBoss" to="." method="_on_AfterBoss_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CompleteScreen/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CompleteScreen/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TopRowLeft/TopRow/PauseButton" to="." method="_on_PauseButton_pressed"]
